"Added express-session, updated server.js, post.controller.js, post.model.js, post.routers.js, and user.controller.js files"

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/adarshsingh705/social-media-APIs#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "session": "^0.1.0"
   },
   "type": "module"
 }
